Fixed z-index problem

--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -13,17 +13,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -1;
+  z-index: 1;
   transition: all 200ms ease-out;
 }
 .footer {
-  z-index: -1;
+  z-index: 1;
 }
 
 @keyframes nav-bar-fade-in {
   0% { }
   100% {
     opacity: 1;
-    z-index: 1;
+    z-index: 2;
   }
 }
